syntax = "proto3";

package agent_setup;
option go_package = "pkg/pb";

import "agent.proto";

service AgentSetup {
  rpc Setup(SetupRequest) returns (SetupResponse);
}

message SetupRequest {
  agent.RequestHeader header = 1;
  string authentik_url = 2;
  string app_slug = 3;
  string client_id = 4;
  string access_token = 5;
  string refresh_token = 6;
}

message SetupResponse {
  agent.ResponseHeader header = 1;
}
